erDiagram

    USER {
        uuid id PK
        string external_auth_id
        string document_number
        string name
        string email

        string position_name
        string area
        string subarea

        date hire_date
        string contract_type
        string salary_type

        uuid leader_id FK

        boolean is_active
        timestamp created_at
    }

    ROLE {
        uuid id PK
        string name
    }

    USER_ROLE {
        uuid user_id FK
        uuid role_id FK
    }

    INDICATOR_ASSIGNMENT {
        uuid id PK
        uuid user_id FK
        string indicator_name
        int year
        decimal target_value
        decimal weight
        boolean is_active
        timestamp created_at
    }

    INDICATOR_TRACKING {
        uuid id PK
        uuid user_id FK
        uuid assignment_id FK
        int year
        int month

        decimal achieved_value
        decimal achievement_percentage
        decimal weighted_score

        boolean target_met
        string status
        boolean is_closed

        timestamp created_at
    }

    EVIDENCE {
        uuid id PK
        uuid tracking_id FK
        string file_path
        uuid uploaded_by FK
        timestamp uploaded_at
    }

    ACTION_PLAN {
        uuid id PK
        uuid tracking_id FK
        text reason_not_met
        text action_plan
        uuid created_by FK
        timestamp created_at
    }

    USER ||--o{ USER : leader

    USER ||--o{ USER_ROLE : has
    ROLE ||--o{ USER_ROLE : assigned

    USER ||--o{ INDICATOR_ASSIGNMENT : has
    INDICATOR_ASSIGNMENT ||--o{ INDICATOR_TRACKING : generates

    USER ||--o{ INDICATOR_TRACKING : records

    INDICATOR_TRACKING ||--o{ EVIDENCE : has
    INDICATOR_TRACKING ||--o{ ACTION_PLAN : triggers